# osx-proxmox-next

./: .gitignore  README.md  install.sh  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
community-scripts/frontend/public/json/: macos-vm.json
community-scripts/vm/: macos-vm.sh
scripts/: setup-hooks.sh
scripts/bash/: osx-proxmox-next.sh
scripts/profiles/: apply_blazing_profile.sh  apply_xcode_profile.sh  revert_blazing_profile.sh  revert_xcode_profile.sh
src/osx_proxmox_next/: __init__.py  amd_patches.py  app.py  assets.py  cli.py  defaults.py  diagnostics.py  domain.py  downloader.py  executor.py  infrastructure.py  planner.py  preflight.py  profiles.py  rollback.py  smbios.py
tests/: test_amd_patches.py  test_app_wizard.py  test_assets.py  test_cli.py  test_defaults.py  test_diagnostics.py  test_domain.py  test_downloader.py  test_executor.py  test_integration_adapter.py  test_planner.py  test_preflight.py  test_profiles.py  test_smbios.py  test_smoke.py
