[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osx-proxmox-next"
version = "0.1.0"
description = "Independent TUI-first macOS on Proxmox automation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "textual>=0.60",
  "rich>=13.7",
]

[project.scripts]
osx-next = "osx_proxmox_next.app:run"
osx-next-cli = "osx_proxmox_next.cli:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=osx_proxmox_next --cov-branch --cov-report=term-missing --cov-fail-under=100"
